--- a/Week3_Homework_Relaxr/css/style2.css
+++ b/Week3_Homework_Relaxr/css/style2.css
@@ -156,6 +156,7 @@ footer .logo {
 footer p {
   font-size: 16px;
   font-weight: 600;
+  color: white;
 }
 
 #part1 {
@@ -170,4 +171,9 @@ footer p {
 #cta {
 height: 88px;
 margin-bottom: 0px;
+}
+
+
+#logo {
+  color: #ffff66;
 }
