--- a/Week3_Homework_startup/css/style.css
+++ b/Week3_Homework_startup/css/style.css
@@ -29,10 +29,18 @@ a {
 	color: white;
 }
 
+nav a {
+	color: white;
+}
+
 img {
 	margin-top: 0px;
 	height: 600px;
 	width: auto;
+}
+
+u {
+	color: yellow;
 }
 
   article {
