--- a/Week4_Homework_mediaQuery/Week3_Homework_Relaxr/css/style2.css
+++ b/Week4_Homework_mediaQuery/Week3_Homework_Relaxr/css/style2.css
@@ -161,35 +161,35 @@ footer p {
   font-size: 28px;
 }
 
-@media only screen and (max-width: 700px) and (min-width: 320px){
+@media only screen and (max-width: 500px){
 
 .container {
-  width: 319px;
+  width: 499px;
 }
 
 body {
-  width: 319px;
+  width: 499px;
 }
 
 header {
-width: 319px;
+width: 499px;
 }
 
 .blogphoto img { 
-  width: 319px;
+  width: 499px;
 
 }
 
 article {
-  width: 319px;
+  width: 499px;
 }
 
 h1 h2 h3 p{
-  width: 319px;
+  width: 499px;
 }
 
 .topbottom{
-  width: 319px;
+  width: 499px;
 }
 
 aside {
@@ -207,12 +207,12 @@ aside {
 
 
 #cta {
-  width: 343px;
+  width: 499px;
 
 }
 
 footer {
- width: 319px;
+ width: 499px;
 }
 
 
