--- a/Week5_JavaScriptcolorscheme/css/style.css
+++ b/Week5_JavaScriptcolorscheme/css/style.css
@@ -12,6 +12,7 @@ h1 {
 }
 p {
   margin: .5em 0;
+  
 }
 
 #switcher {
@@ -31,11 +32,14 @@ p {
 
 #grayButton {
   background: gray;
+
 }
 #whiteButton {
   background: white;
 }
 
 #blueButton {
-  background:#6495ED;
+  background:blue;
+
+
 }
