Week 8 added images

--- a/Week7_Homework_Functions/css/style.css
+++ b/Week7_Homework_Functions/css/style.css
@@ -93,11 +93,11 @@ header {
 .sydney {
   background-image: url(../images/sydney.jpg)
 }
-
+/*added city extra credit*/
 .dc {
   background-image: url(../images/washingtondc.jpg)
 }
-
+/*added city extra credit*/
 .compton {
   background-image: url(../images/compton.jpg)
 }
