--- a/Week9/forms/css/style.css
+++ b/Week9/forms/css/style.css
@@ -1,10 +1,67 @@
-input[type="text"], input[type="email"], input[type="password"]{
-	font-size: 20px;
-	 padding: 10px;
-	 margin: 15px 0;
-	 width: 200px;
+body, form, input, button {
+  font-size: 24px;
+  font-family: sans-serif;
 }
 
-select{
-font-family: Times;
+body {
+	background: #EEE;
+	margin: 0;
+	padding: 0;
+}
+
+#app {
+	max-width: 30em;
+	margin: 10px auto;
+	border-radius: 10px;
+	padding: 2px;
+	background: white;
+	box-shadow: 0 0 5px rgba(0,0,0,.5);
+}
+
+#app header, #app footer {
+	background: #222;
+	color: white;
+	padding: 20px;
+}
+#app header {
+	border-radius: 10px 10px 0 0;
+}
+#app footer {
+	border-radius: 0 0 10px 10px;
+}
+
+#todos {
+	background: white;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+#todos li {
+	padding: 8px 20px;
+}
+#todos li:hover {
+	background: #EEE;
+}
+
+#todos .item {
+	cursor: pointer;
+}
+#todos .done .item {
+	color: #CCC;
+	text-decoration: line-through;
+}
+
+#todos a {
+	visibility: hidden;
+	cursor: pointer;
+	margin-left: 1em;
+	font-size: .5em;
+	text-transform: uppercase;
+	color: navy;
+}
+#todos li:hover a {
+	visibility: visible;
+}
+#todos a:hover {
+	text-decoration: underline;
 }
